seventh commit of mine

--- a/src/app/styles/login.scss
+++ b/src/app/styles/login.scss
@@ -21,7 +21,9 @@
     margin: 100px;
     float: right;
     color: red;
-    background-color: rgb(79, 79, 248);
+    // background-color: rgb(79, 79, 248);
+    text-decoration: none;
+    margin-top: 110px;
 }
 
 body {
