--- a/src/app/styles/register.scss
+++ b/src/app/styles/register.scss
@@ -4,7 +4,7 @@
     justify-content: space-evenly;
     background-color: rgb(73, 199, 249);
     position: absolute;
-    height: 5%;
+    height: 15%;
     width: 100%;
     form {
         input {
@@ -13,6 +13,7 @@
         button{
             background-color: blue;
             width: 120px;
+            font-weight: bold;
         }
     }
 }
@@ -33,7 +34,10 @@ body {
     // color: red;
     margin: 10px;
     background-color: rgb(47, 1, 249);
+    font-weight: bold;
 }
 .login{
     margin: 10px;
+    text-decoration: none;
+    font-weight: bold;
 }
