--- a/src/app/styles/login.scss
+++ b/src/app/styles/login.scss
@@ -14,6 +14,7 @@
         background-color: rgb(140, 140, 233);
         width: 80px;
         height: 40px;
+        font-weight: bold;
     }
 }
 
@@ -21,9 +22,9 @@
     margin: 100px;
     float: right;
     color: red;
-    // background-color: rgb(79, 79, 248);
     text-decoration: none;
     margin-top: 110px;
+    font-weight: bold;
 }
 
 body {
